# llm-git

./: .gitignore  AGENTS.md  Cargo.toml  README.md  report.html  rust-toolchain.toml
.claude/commands/: scaffold-test.md
.github/workflows/: ci.yml  release.yml
examples/configs/: litellm.toml
prompts/analysis/: default.md
prompts/changelog/: default.md
prompts/map/: default.md
prompts/reduce/: default.md
prompts/summary/: default.md
src/: analysis.rs  api.rs  changelog.rs  compose.rs  config.rs  diff.rs  error.rs  git.rs  lib.rs  main.rs  map_reduce.rs  normalization.rs  patch.rs  repo.rs  rewrite.rs  style.rs  templates.rs  tokens.rs  types.rs  validation.rs
src/testing/: compare.rs  fixture.rs  mod.rs  report.rs  runner.rs
